--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,25 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Node
+node_modules/
+build/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
+# React
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env
+*.log
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.db
+*.sqlite3
+.env
+*.egg-info/
+
+# VS Code
+.vscode/
+
+# Outros
+*.swp
+*.swo
